add env variables for api keys

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -94,7 +94,11 @@ i18n.default_language = en
 #  `Static.ServeModule("modulename","public")`
 module.static=github.com/revel/modules/static
 
+trello.api_key=${TRELLO_API_KEY}
+trello.secret${TRELLO_SECRET}
 
+wunderlist.api_key=${WUNDERLIST_API_KEY}
+wunderlist.secret${WUNDERLIST_SECRET}
 
 ################################################################################
 # Section: dev
@@ -107,32 +111,26 @@ module.static=github.com/revel/modules/static
 #   `<no value>`
 mode.dev = true
 
-
 # Pretty print JSON/XML when calling RenderJson/RenderXml
 results.pretty = true
-
 
 # Automatically watches your applicaton files and recompiles on-demand
 watch = true
 
-
 # If you set watcher.mode = "eager", the server starts to recompile
 # your application every time your application's files change.
 watcher.mode = "normal"
-
 
 # Module to run code tests in the browser
 # See:
 #   http://revel.github.io/manual/testing.html
 module.testrunner = github.com/revel/modules/testrunner
 
-
 # Where to log the various Revel logs
 log.trace.output = off
 log.info.output  = stderr
 log.warn.output  = stderr
 log.error.output = stderr
-
 
 
 ################################################################################
@@ -143,17 +141,9 @@ log.error.output = stderr
 #  [dev] section for documentation of the various settings
 [prod]
 mode.dev = false
-
-
 results.pretty = false
-
-
 watch = false
-
-
 module.testrunner =
-
-
 log.trace.output = off
 log.info.output  = off
 log.warn.output  = %(app.name)s.log
